--- a/style.css
+++ b/style.css
@@ -16,15 +16,14 @@ div{
 div>article{
     height: 50%;
     width: 40%;
-    background-color: red;
-    /* display: flex; */
+    border-radius: 0px 0px 30px 30px;
+    box-shadow: 0px 0px 34px red;
 }
 
 div>article>div.half{
     height: 50%;
     width: 100%;
     background-color: pink;
-    
 }
 
 div>article>div.half>h1{
@@ -40,10 +39,17 @@ div>article>div.full{
     width: 100%;
     background-color: yellow;
     gap: 15px;
+    border-radius: 0px 0px 30px 30px;
 }
 
 div>article>div.full>button{
+    height: 50px;
+    width: 70px;
     background-color: aqua;
     color: blue;
     border-color: white;
+    border-radius: 15px;
+    font-size: 14px;
+    border-color: aquamarine ;
+    box-shadow: 0px 5px 12px aqua;
 }
